--- a/app/src/main/res/layout/activity_fight_result.xml
+++ b/app/src/main/res/layout/activity_fight_result.xml
@@ -7,9 +7,9 @@
 
     <Button
             android:id="@+id/btn_fight_close"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_weight="50dp"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:background="@drawable/ic_arrow_back_black_24dp"
     />
