--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="#3a6d99"
-             tools:context=".ui.fight.FightFragment">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:background="#3a6d99"
+                                                   tools:context=".ui.fight.FightFragment"
+                                                   android:id="@+id/linearLayout">
 
-    <Button
-            android:text="@string/title_fight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/btn_fight"/>
+    <TextView
+            android:text="@string/fight_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/btn_fight"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="340dp" android:layout_marginStart="84dp" android:textSize="36sp"
+            android:textColor="@android:color/white" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.002"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
