--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      android:id="@+id/top_nav_view">
+
+    <item android:id="@+id/item_cup_icon"
+          android:icon="@drawable/ic_cup"
+          android:title=""
+          app:showAsAction="always">
+        <menu>
+            <item android:id="@+id/item_fight_wincounter"
+                  android:title="@string/item_fight_win"/>
+            <item android:id="@+id/item_fight_losscounter"
+                  android:title="@string/item_fight_loss"/>
+        </menu>
+    </item>
 
     <item android:id="@+id/logout"
           android:title="@string/title_logout"/>
