--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -14,7 +14,8 @@
             android:layout_height="240dp"
             android:src="@drawable/phone_shake"
             android:id="@+id/gifimageView_figth_phone_shake"
-            android:layout_marginTop="60dp"/>
+            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="72dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
             android:text="@string/fight_text"
